# RemapH

./: index.html  package-lock.json  package.json  tsconfig.json
ZZdocumentacion/: 000_Arbol_Archivos.md  00_Indice.md  01_UI.md  02_Core.md  03_Runtime.md  04_Platform.md  05_Estilos.md  06_Principios.md  07_Pendientes.md  ZZ_checklist.md
ZZdocumentacion/backup_xsiak/: Delet_comp_capturador_trigger.ts
src/: main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analizador_captura.rs  analizador_trigger.rs  buffer_eventos.rs  cache.rs  captura.rs  comandos.rs  compilador.rs  config.rs  entrada.rs  estado.rs  evento_trigger.rs  eventos.rs  idioma.rs  instante.rs  lib.rs  main.rs  perfilcache.rs  perfiljson.rs  persistencia.rs  pulsadores.rs  pulsadores.tsv  reentrada.rs  runtime.rs  usuario.rs
src-tauri/src/backend/: back_interception.rs  back_mouse.rs  back_procesos.rs  back_salida.rs  back_teclas.rs  back_windows.rs  mod.rs
src/core/: core_analizar_captura.ts  core_analizar_trigger.ts  core_configuracion_captura.ts  core_conflictos.ts  core_contexto_fila.ts  core_entrada.ts  core_evento_captura.ts  core_normalizar_trigger.ts  core_notificaciones.ts  core_perfil.ts  core_perfil_acciones.ts  core_perfil_json.ts  core_perfil_ui.ts  core_trigger.ts  core_validar_compatibilidad.ts
src/styles/: styl_botones.css  styl_general.css  styl_layout.css  styl_tabla.css  styl_variables.css
src/ui/: ui_app.ts  ui_columnas.ts  ui_fila.ts  ui_layout.ts  ui_redimension_columnas.ts  ui_statusbar.ts  ui_tabla.ts  ui_tabla_control.ts  (+1 more)
(+15 files in other folders)
